[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]==1.3.13", 'plotly<6.0']


[project.urls]
repository = "https://github.com/FAIRmat-NFDI/nomad-distro-template"

[project.optional-dependencies]
plugins = [
 'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-chemical-energy @ git+https://github.com/nomad-hzb/nomad-chemical-energy.git',
  'pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git'
]
jupyter = []
dev = ["nomad-lab[parsing, infrastructure, dev]==1.3.13"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
